SET (xml_SRCS test_xml.cpp xml.rc)

if (MINGW)
  if (BUILD_SHARED_LIBS)
	ADD_DEFINITIONS("-DBUILD_EXE")
  else (BUILD_SHARED_LIBS)
    ADD_DEFINITIONS("-DBUILD_STATIC")
  endif (BUILD_SHARED_LIBS)
endif (MINGW)

if (MSVC)
  if (BUILD_SHARED_LIBS)
	  ADD_DEFINITIONS("-DBUILD_EXE")
  else (BUILD_SHARED_LIBS)
    ADD_DEFINITIONS("-DBUILD_STATIC")
  endif (BUILD_SHARED_LIBS)
  ADD_DEFINITIONS("-D_SCL_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_WARNINGS")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /MANIFEST:NO")
endif (MSVC)

add_executable (test_xml ${xml_SRCS})
target_link_libraries (test_xml uwin)
